<resources>
    <string name="app_name">RideTaxi&#xD;Driver</string>
    <string name="firstNameEditText">First name</string>
    <string name="last_nameEditText">Last Name</string>
    <string name="e_mailEditText">E-mail</string>
    <string name="phone_numberEditText">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_text_view"><u>Create an account</u></string>
    <string name="confirm_the_password">Confirm your password</string>
    <string name="create_account">Create Account</string>
    <string name="all_fields_required">All fields are required!</string>
    <string name="waiting_rides">WAITING RIDES</string>
    <string name="get_order">GET ORDER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="id_number">Id Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
