<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/taxi_background"
    tools:context=".controller.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="10dp"
        android:padding="7dp"
        android:background="@drawable/rounded_button"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="7dp"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="28sp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_text_view"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>

</RelativeLayout>